; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuivdp2.c_yui_vdp2_draw.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuivdp2.c_yui_vdp2_draw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GDK_COLORSPACE_RGB = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@yui_texture_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*, i32, i32)* @yui_vdp2_draw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @yui_vdp2_draw(%struct.TYPE_3__* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %52

13:                                               ; preds = %4
  %14 = load i32, i32* %7, align 4
  %15 = icmp sgt i32 %14, 0
  br i1 %15, label %16, label %52

16:                                               ; preds = %13
  %17 = load i32, i32* %8, align 4
  %18 = icmp sgt i32 %17, 0
  br i1 %18, label %19, label %52

19:                                               ; preds = %16
  %20 = load i32, i32* %7, align 4
  %21 = mul nsw i32 %20, 4
  store i32 %21, i32* %10, align 4
  %22 = load i32, i32* %10, align 4
  %23 = srem i32 %22, 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %19
  %26 = load i32, i32* %10, align 4
  %27 = srem i32 %26, 4
  %28 = sub nsw i32 4, %27
  br label %30

29:                                               ; preds = %19
  br label %30

30:                                               ; preds = %29, %25
  %31 = phi i32 [ %28, %25 ], [ 0, %29 ]
  %32 = load i32, i32* %10, align 4
  %33 = add nsw i32 %32, %31
  store i32 %33, i32* %10, align 4
  %34 = load i32*, i32** %6, align 8
  %35 = load i32, i32* @GDK_COLORSPACE_RGB, align 4
  %36 = load i32, i32* @TRUE, align 4
  %37 = load i32, i32* %7, align 4
  %38 = load i32, i32* %8, align 4
  %39 = load i32, i32* %10, align 4
  %40 = load i32, i32* @yui_texture_free, align 4
  %41 = call i32* @gdk_pixbuf_new_from_data(i32* %34, i32 %35, i32 %36, i32 8, i32 %37, i32 %38, i32 %39, i32 %40, i32* null)
  store i32* %41, i32** %9, align 8
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @YUI_VIEWER(i32 %44)
  %46 = load i32*, i32** %9, align 8
  %47 = load i32, i32* %7, align 4
  %48 = load i32, i32* %8, align 4
  %49 = call i32 @yui_viewer_draw_pixbuf(i32 %45, i32* %46, i32 %47, i32 %48)
  %50 = load i32*, i32** %9, align 8
  %51 = call i32 @g_object_unref(i32* %50)
  br label %52

52:                                               ; preds = %30, %16, %13, %4
  ret void
}

declare dso_local i32* @gdk_pixbuf_new_from_data(i32*, i32, i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @yui_viewer_draw_pixbuf(i32, i32*, i32, i32) #1

declare dso_local i32 @YUI_VIEWER(i32) #1

declare dso_local i32 @g_object_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
